[tool.poetry]
name = "indfoedsretsproeven"
version = "0.1.0"
description = ""
authors = ["Yoyo <yvedengw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
neoteroi-mkdocs = "^1.1.0"
mkdocs-material = "^9.5.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
